# soundminer2reaper

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  sm2reaper.py
.github/workflows/: pages.yml
tests/: test_sm2reaper.py
web/: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
web/.openai/: hosting.json
web/app/: globals.css  layout.tsx  page.tsx
web/public/: converter-worker.mjs  default-vst3-scan-cache.ini  sm2reaper.py  web_adapter.py
web/scripts/: sync-converter.mjs
web/tests/: rendered-html.test.mjs  test_web_adapter.py
