[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "soundminer2reaper"
version = "0.1.0"
description = "Convert Soundminer plugin presets into REAPER FX chains"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Multimedia :: Sound/Audio",
]

[project.scripts]
sm2reaper = "sm2reaper:main"

[tool.setuptools]
py-modules = ["sm2reaper"]
